syntax = "proto3";

package Auth;

service Authorization {
  rpc SignUp(RegisterDto) returns (UserAuthDto) {}
  rpc SignIn(LoginDto) returns (AuthToken) {}
  rpc Refresh(AuthToken) returns (AuthToken) {}
}

message RegisterDto {
  string email = 1;
  string password = 2;
  string name = 3;
}

message LoginDto {
  string email = 1;
  string password = 2;
}

message UserAuthDto {
  int32 id = 1;
  string email = 2;
  string password = 3;
}

message AuthToken {
  string token = 1;
}