syntax = "proto3";

package User;

service UserService {

}